@@ -234,6 +234,7 @@ public:
 	//-----------------------------------------------------------------------------
 	//@{
 	virtual CGraphicsPath* createGraphicsPath () = 0;	///< create a graphics path object, you need to forget it after usage
+	CGraphicsPath* createRoundRectGraphicsPath (const CRect& size, CCoord radius);	///< create a rect with round corners as graphics path, you need to forget it after usage
 
 	enum PathDrawMode
 	{
