@@ -1,3 +1,8 @@
+2011-03-04 arne
+
+	* add CDrawContext::createRoundRectGraphicsPath(..) method (thanks to Big Tick for contribution)
+	* fix quartz graphics path addArc method
+
 2011-03-03 arne
 	
 	* new static bool CView::kDirtyCallAlwaysOnMainThread. When this is set to true a call to CView::setDirty(true) will
